==> Mehawgin/DiffCompass/5525舞台/代码/4.0inch_SPI_Module_ST7796_MSP4030_MSP4031_V1.0/1-Demo/Demo_STM32/Demo_MSP4030_MSP4031_STM32F407ZGT6_Software_SPI/HARDWARE/LCD/lcd.c <==
#include "lcd.h"
#include "stdlib.h"
#include "delay.h"
#include "spi.h"

u16 Lcd_ReadData_16Bit(void)
{
	u16 r,g;
	LCD_CS_CLR;
	LCD_RS_CLR;	  
	SPI_WriteByte(lcddev.rramcmd);	
	LCD_RS_SET;
	SPI_ReadByte();
	r = SPI_ReadByte();
	g = SPI_ReadByte();
	LCD_CS_SET;
	r<<=8;
	r|=g;
	return r;
}

void LCD_GPIOInit(void)
{
	GPIO_InitTypeDef  GPIO_InitStructure;
	      
	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOB ,ENABLE);
	
	GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_12| GPIO_Pin_13|GPIO_Pin_14| GPIO_Pin_15;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;//普通输出模式
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;   //推挽输出
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;//上拉
	GPIO_Init(GPIOB, &GPIO_InitStructure);
	LCD_LED=1;  //点亮背光
}

u16 LCD_Read_ID(void)
{
	u8 i,val[3] = {0};
	LCD_WR_REG(0xF0);     // Command Set Control
	LCD_WR_DATA(0xC3);   

	LCD_WR_REG(0xF0);     
	LCD_WR_DATA(0x96);  
	LCD_CS_CLR;
	for(i=1;i<4;i++)
	{
		LCD_RS_CLR;	  
		SPI_WriteByte(0xFB);
		LCD_RS_SET;
		SPI_WriteByte(0x10+i);
		LCD_RS_CLR;	  
		SPI_WriteByte(0xD3);
		LCD_RS_SET;
		val[i-1] = SPI_ReadByte();
		LCD_RS_CLR;	  
		SPI_WriteByte(0xFB);
		LCD_RS_SET;
		SPI_WriteByte(0x00);	
	}
	LCD_CS_SET;
	LCD_WR_REG(0xF0);     // Command Set Control
	LCD_WR_DATA(0x3C);   
	LCD_WR_REG(0xF0);     
	LCD_WR_DATA(0x69);  
	lcddev.id=val[1];
	lcddev.id<<=8;
	lcddev.id|=val[2];
	return lcddev.id;
}
